fixed horizontal scrolling?

--- a/src/components/DarkVeil.css
+++ b/src/components/DarkVeil.css
@@ -1,6 +1,8 @@
 .darkveil-canvas {
   width: 100%;
   height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   display: block;
   position: absolute;
   top: 0;
